@@ -1,3 +1,9 @@
+2009-01-22  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* src/murrine_draw.c (murrine_draw_button):
+	* src/murrine_draw_rgba.c (murrine_rgba_draw_button):
+	Automatically reduce glow_shade on disabled buttons.
+
 2009-01-11  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* src/murrine_style.c (murrine_style_draw_shadow):
